<resources>
    <string name="app_name">App Encuesta</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Mi Perfil</string>
    <string name="menu_slideshow">Mis Encuestas</string>
    <string name="menu_ludocheck">Ludopata Check</string>
    <string name="menu_rankuser">Mi Calificacion</string>
    <string name="menu_sendquery">Sincronizar</string>
    <string name="menu_login">Log In</string>
    <string name="menu_exitapp">Cerrar App</string>

    <string-array name="locales">

        <item>Local Miraflores</item>
        <item>Local La Molina</item>
        <item>Local Surco</item>

    </string-array>

    <string-array name="servicios">

        <item>Sala de Juego</item>
        <item>Club CasinoCash</item>
        <item>Restaurante</item>

    </string-array>

    <string-array name="ludopata">

        <item>11111111</item>
        <item>22222222</item>
        <item>33333333</item>

    </string-array>
    <string name="title_activity_mapa_locales">Mapa_Locales</string>

</resources>