<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_baseline_account_circle_24"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_baseline_list_alt_24"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_ludocheck"
            android:icon="@drawable/zoom"
            android:title="@string/menu_ludocheck" />
        <item
            android:id="@+id/nav_rankuser"
            android:icon="@drawable/stars"
            android:title="@string/menu_rankuser" />
        <item
            android:id="@+id/nav_sendquery"
            android:icon="@drawable/ic_baseline_sync_24"
            android:title="@string/menu_sendquery" />
    </group>
    <group android:checkableBehavior="single">
    <item
        android:id="@+id/nav_login"
        android:title="@string/menu_login" />
    <item
        android:id="@+id/nav_close"
        android:title="@string/menu_exitapp" />
    </group>
</menu>