<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myproject1.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.myproject1.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.myproject1.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_ludocheck"
        android:name="com.example.myproject1.ui.ludocheck.LudopataCheck"
        android:label="Ludopata Check"
        tools:layout="@layout/ludopata_check_fragment2" />
    <fragment
        android:id="@+id/nav_rankuser"
        android:name="com.example.myproject1.ui.rankuser.RankingUser"
        android:label="Ranking Colaborador"
        tools:layout="@layout/ranking_user_fragment" />
    <fragment
        android:id="@+id/nav_sendquery"
        android:name="com.example.myproject1.ui.sendquery.SendEncuesta"
        android:label="Send Encuesta"
        tools:layout="@layout/send_encuesta_fragment" />
</navigation>